100
- initial CoreELEC version