@@ -2,16 +2,16 @@
 # Copyright (C) 2018-present Team CoreELEC (https://coreelec.org)
 
 PKG_NAME="tvheadend43"
-PKG_VERSION="221c29b40b1e53ae09a69d9458442dd4fea665f5"
-PKG_SHA256="0c2cc2ee09d21b34f2d72d971557a843b20a9e7da3d6550c4ce2fbe37c35ba13"
-PKG_VERSION_NUMBER="221c29b"
-PKG_REV="100"
+PKG_VERSION="0f13f5912921321a7061ffde760ec41c32d99e77"
+PKG_SHA256="5035032126ff342b57e48929c7a7af4de410dc1c7581f15599005474ef5578af"
+PKG_VERSION_NUMBER="0f13f59"
+PKG_REV="103"
 PKG_ARCH="any"
 PKG_LICENSE="GPL"
 PKG_SITE="http://www.tvheadend.org"
 PKG_URL="https://github.com/tvheadend/tvheadend/archive/$PKG_VERSION.tar.gz"
 PKG_DEPENDS_TARGET="toolchain avahi comskip curl dvb-apps ffmpegx libdvbcsa libhdhomerun \
-                    libiconv openssl pngquant:host Python2:host tvh-dtv-scan-tables"
+                    libiconv openssl pngquant:host Python3:host tvh-dtv-scan-tables"
 PKG_SECTION="service"
 PKG_SHORTDESC="Tvheadend: a TV streaming server for Linux"
 PKG_LONGDESC="Tvheadend ($PKG_VERSION_NUMBER): is a TV streaming server for Linux supporting DVB-S/S2, DVB-C, DVB-T/T2, IPTV, SAT>IP, ATSC and ISDB-T"
