@@ -1,2 +1,11 @@
+103
+- tvh bump to 0f13f59 (master 2020.07.07)
+
+102
+- tvh bump to 51a4c5b (master 2020.06.10) 
+
+101
+- python3, tvh bump to 2af3b9e (master 2020.05.22) 
+
 100
 - initial CoreELEC version
